--- a/Front-end/src/app/globals.css
+++ b/Front-end/src/app/globals.css
@@ -34,7 +34,9 @@ a {
   min-height: 100vh;
   margin: 0 auto;
   padding: 0 60px;
+  padding-top: 100px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  /* position: sticky; */
 }
