--- a/Front-end/src/components/navbar/navbar.module.css
+++ b/Front-end/src/components/navbar/navbar.module.css
@@ -1,8 +1,14 @@
 .container {
   height: 100px;
+  width: 100%;
+  position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  left: 0px;
+  top: 0px;
+  z-index: 10;
+  padding: 0 60px;
 }
 
 .logo {
@@ -23,4 +29,18 @@
   color: white;
   cursor: pointer;
   border-radius: 3px;
+}
+
+.theme{
+  transition: 1s all ease;
+}
+
+.light {
+  background-color: white;
+  color: #111;
+}
+
+.dark {
+  background-color: #111;
+  color: #bbb;
 }
